--- a/public/index.html
+++ b/public/index.html
@@ -19,30 +19,109 @@
   <button id="sub">Subscribe to notifications</button>
 
   <script>
-    // existing SW + subscribe (keep your version if you already have it)
-    async function setupPush() {
-      const reg = await navigator.serviceWorker.register("/sw.js");
-      const key = await (await fetch("/vapidPublicKey")).text();
-      document.getElementById("sub").onclick = async () => {
-        const sub = await reg.pushManager.subscribe({
-          userVisibleOnly: true,
-          applicationServerKey: urlBase64ToUint8Array(key)
+    const btn = document.getElementById("sub");
+    let reg; // service worker registration cache
+
+    function setBtn(state) {
+        if (state === "sub") { btn.textContent = "Unsubscribe"; btn.disabled = false; }
+        else if (state === "unsub") { btn.textContent = "Subscribe to notifications"; btn.disabled = false; }
+        else { btn.textContent = "…"; btn.disabled = true; }
+    }
+
+    async function readySW() {
+        if (!("serviceWorker" in navigator) || !("PushManager" in window)) {
+        btn.textContent = "Push not supported"; btn.disabled = true; return null;
+        }
+        if (!reg) {
+        await navigator.serviceWorker.register("/sw.js");
+        reg = await navigator.serviceWorker.ready;
+        }
+        return reg;
+    }
+
+    async function getVapidKey() {
+        return (await (await fetch("/vapidPublicKey")).text()).trim();
+    }
+
+    function toUint8(base64) {
+        const pad = "=".repeat((4 - base64.length % 4) % 4);
+        const b64 = (base64 + pad).replace(/-/g, "+").replace(/_/g, "/");
+        const raw = atob(b64);
+        return Uint8Array.from([...raw].map(c => c.charCodeAt(0)));
+    }
+
+    // ---- core: sync button label with actual state (SW + server)
+    async function syncButton() {
+        setBtn("…");
+        const r = await readySW();
+        if (!r) return;
+        const sub = await r.pushManager.getSubscription();
+        let existsOnServer = false;
+
+        if (sub) {
+        try {
+            const q = new URLSearchParams({ endpoint: sub.endpoint }).toString();
+            const resp = await fetch(`/subscribe/exists?${q}`);
+            const json = await resp.json();
+            existsOnServer = !!json.exists;
+        } catch {}
+        }
+
+        setBtn(sub && existsOnServer ? "sub" : "unsub");
+        return { sub, existsOnServer };
+    }
+
+    // ---- click handler toggles and then re-syncs
+    btn.addEventListener("click", async () => {
+        const r = await readySW(); if (!r) return;
+
+        // refresh state at click time
+        const { sub, existsOnServer } = await syncButton();
+
+        // Unsubscribe flow
+        if (sub && existsOnServer) {
+        setBtn("…");
+        const endpoint = sub.endpoint;
+        try { await sub.unsubscribe(); } catch {}
+        await fetch("/subscribe", {
+            method: "DELETE",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ endpoint })
+        });
+        await syncButton();
+        return;
+        }
+
+        // Subscribe flow
+        if (Notification.permission === "denied") {
+        alert("Notifications are blocked. Enable them in your browser settings.");
+        return;
+        }
+
+        try {
+        setBtn("…");
+        if (Notification.permission !== "granted") await Notification.requestPermission();
+        const key = await getVapidKey();
+        const newSub = await r.pushManager.subscribe({
+            userVisibleOnly: true,
+            applicationServerKey: toUint8(key)
         });
         await fetch("/subscribe", {
-          method:"POST", headers:{"Content-Type":"application/json"},
-          body: JSON.stringify(sub)
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(newSub)
         });
-        alert("Subscribed!");
-      };
-    }
-    function urlBase64ToUint8Array(base64String) {
-      const padding = "=".repeat((4 - base64String.length % 4) % 4);
-      const base64 = (base64String + padding).replace(/-/g, "+").replace(/_/g, "/");
-      const rawData = atob(base64);
-      return Uint8Array.from([...rawData].map(c => c.charCodeAt(0)));
-    }
-    setupPush();
-  </script>
+        await syncButton();
+        } catch (e) {
+        console.error(e);
+        setBtn("unsub");
+        alert("Subscription failed.");
+        }
+    });
+
+    // run once on load
+    (async () => { await syncButton(); })();
+    </script>
 
   <script src="/install.js" defer></script>
 </body>
