--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,8 @@
       <select id="language-select">
         <option value="italian">🇮🇹 Italian</option>
         <option value="spanish">🇪🇸 Spanish</option>
+        <option value="french">🇫🇷 French</option>
+        <option value="japanese">🇯🇵 Japanese</option>
       </select>
     </div>
 
