update to vercel

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,10 @@
       </select>
     </div>
 
+    <button id="sendNow" style="display: none;">
+      <i data-lucide="send" class="ios-icon"></i> Send One Now
+    </button>
+
     <button id="sub">
       <i data-lucide="bell" class="ios-icon"></i> Subscribe
     </button>
