--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon" href="/icon-192.png" />
 
   <!-- Theme -->
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="theme-color" content="#f9f9f9" />
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <link rel="stylesheet" href="/css/styles.css" />
 </head>
