--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <meta name="theme-color" content="#f9f9f9" />
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/waves.css" />
 </head>
 <body>
   <button id="installBtn">
@@ -24,6 +25,9 @@
   </button>
 
   <div id="main-container">
+    <div class="waving-hand">
+      <img src="Chicken.gif" width="50px"/>
+    </div>
     <div class="headline-container">
       <h1><i data-lucide='languages' class='ios-icon'></i> LANGPUSH</h1>
       <div id="github">
@@ -71,8 +75,6 @@
     </button>
 
     <div id="subscribe-info">
-      When you subscribe, you'll receive 3 notifications a day with hand picked
-      <span id="language-name">Italian</span> ↔ English phrase pairs.
     </div>
   </div>
 
