--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="iosTip">
-      For push notifications to work, on iPhone this app needs to be added to the homescreen.
+      For push notifications to work, on iPhone this app needs to be added to the homescreen from Safari.
       <div id="iosTipAction">
         <span><i data-lucide="share" class="ios-icon"></i> Share</span> then
         <span><i data-lucide="plus-square" class="ios-icon"></i> Add to Home Screen</span>
