--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,18 @@
     </div>
 
     <div id="iosTip">
-      For push notifications to work, on iPhone this app needs to be added to the homescreen from Safari.
+      <div>For push notifications to work, this app needs to be added to the homescreen from 🧭 Safari.</div>
       <div id="iosTipAction">
-        <span><i data-lucide="share" class="ios-icon"></i> Share</span> then
-        <span><i data-lucide="plus-square" class="ios-icon"></i> Add to Home Screen</span>
+        <div>1: Tap <i data-lucide="share" class="ios-icon"></i> <b>Share</b> at the bottom of the screen</div>
+        <div>2: Tap <i data-lucide="plus-square" class="ios-icon"></i> <b>Add to Home Screen</b></div>
+        <div class="swoosh-down"><i data-lucide="move-down" class="ios-icon" style="width: 50px; height: 50px; stroke-width: 1px;"></i></div>
+      </div>
+    </div>
+
+    <div id="iosThirdpartyTip">
+      <div>You need to open this website in Safari so you can add it to your homescreen.</div>
+      <div id="copyLinkBtn" onclick="copyLink()">
+        <i data-lucide="copy" class="ios-icon"></i> Copy link
       </div>
     </div>
 
