--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,16 @@
     </div>
 
     <div id="iosTip">
-      <div>For push notifications to work, this app needs to be added to the homescreen from 🧭 Safari.</div>
+      <div>For push notifications to work, this app needs to be added to the homescreen.</div>
       <div id="iosTipAction">
-        <div>1: Tap <i data-lucide="share" class="ios-icon"></i> <b>Share</b> at the bottom of the screen</div>
-        <div>2: Tap <i data-lucide="plus-square" class="ios-icon"></i> <b>Add to Home Screen</b></div>
+        <div>1: Tap <i data-lucide="share" class="ios-icon"></i> or <i data-lucide="ellipsis" class="ios-icon"></i> at the bottom of the screen</div>
+        <div>2: Then in the menu tap <i data-lucide="plus-square" class="ios-icon"></i> <b>Add to Home Screen</b></div>
         <div class="swoosh-down"><i data-lucide="move-down" class="ios-icon" style="width: 50px; height: 50px; stroke-width: 1px;"></i></div>
       </div>
     </div>
 
     <div id="iosThirdpartyTip">
-      <div>You need to open this website in Safari so you can add it to your homescreen.</div>
+      <div>You need to open this website in 🧭 Safari so you can add it to your homescreen.</div>
       <div id="copyLinkBtn" onclick="copyLink()">
         <i data-lucide="copy" class="ios-icon"></i> Copy link
       </div>
