--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,12 @@
     </div>
 
     <div class="last-notification" style="display: none;">
-      <label class="">Last</label>
+      <div class="last-notification-header">
+        <label class="">Last</label>
+        <button id="refreshLastBtn" class="refresh-btn" title="Refresh last notification">
+          <i data-lucide="refresh-cw" class="ios-icon"></i>
+        </button>
+      </div>
       <div class="english"></div>
       <div class="original">
         <div class="reveal-text" style="display: none;">Reveal</div>
