--- a/public/index.html
+++ b/public/index.html
@@ -59,12 +59,17 @@
         </label>
       </div>
       <div class="selection-container">
-        <select id="language-select" class="custom-select">
-          <option value="italian">🇮🇹 Italian</option>
-          <option value="spanish">🇪🇸 Spanish</option>
-          <option value="french">🇫🇷 French</option>
-          <option value="japanese">🇯🇵 Japanese</option>
-        </select>
+        <div class="language-select-container">
+          <select id="language-select" class="custom-select">
+            <option value="italian">🇮🇹 Italian</option>
+            <option value="spanish">🇪🇸 Spanish</option>
+            <option value="french">🇫🇷 French</option>
+            <option value="japanese">🇯🇵 Japanese</option>
+          </select>
+          <div class="language-loading" style="display: none;">
+            <i data-lucide="loader" class="ios-icon rotating"></i>
+          </div>
+        </div>
         <div class="difficulty-select-container">
           <select id="difficulty-select" class="custom-select">
             <option value="easy">Easy</option>
