--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
       <h1 id="chickenBtn">
         <i data-lucide='languages' class='ios-icon'></i> LANGPUSH
       </h1>
-      <div id="github">
+      <!-- <div id="github">
         <a href='https://github.com/itymarcel/langpush' target='_blank'>
           see on github
         </a>
-      </div>
+      </div> -->
     </div>
 
     <div id="iosTip">
