--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,12 @@
           <i data-lucide="refresh-cw" class="ios-icon"></i>
         </button>
         <button id="historyBtn" style="display: none;" class="history-button">
-          <i data-lucide="history" class="ios-icon"></i>
+          <span class="history-normal-state">
+            <i data-lucide="history" class="ios-icon"></i>
+          </span>
+          <span class="history-loading-state" style="display: none;">
+            <i data-lucide="loader" class="ios-icon rotating"></i>
+          </span>
         </button>
       </div>
       <div class="english"></div>
