--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>LANGPUSH</title>
   <link rel="manifest" href="/manifest.webmanifest" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <!-- Favicon for all browsers -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -155,6 +155,12 @@
   </div>
 
   <script src="/js/popover.js"></script>
+  <script src="/js/utils.js"></script>
+  <script src="/js/subscription-manager.js"></script>
+  <script src="/js/ui-controller.js"></script>
+  <script src="/js/preferences-manager.js"></script>
+  <script src="/js/notification-handler.js"></script>
+  <script src="/js/send-now-manager.js"></script>
   <script src="/js/history.js"></script>
   <script src="/js/app.js"></script>
   <script src="/install.js" defer></script>
